# psa_anim

./: .gitignore  CMakeLists.txt  README.md  index.html  index_old.html  psa_anim_variables.sh.in
css/: flickity.css
ext/: catch2.cmake  hermes.cmake  lodepng.cmake  pybind11.cmake
ext/faSavageHutterFoam/: README.md
ext/faSavageHutterFoam/applications/solvers/faSavageHutterFoam/: createFaFields.H  faSavageHutterFoam.C
ext/lodepng/: CMakeLists.txt
lib/: CMakeLists.txt  psa_anim_py.cpp
lib/psa_anim/: block_mesh.cpp  block_mesh.h  boundary_mesh.h  colors.cpp  colors.h  dsl_mesh.h  interpolation.h  interpolators.h  mesh_utils.cpp  mesh_utils.h  msh_reader.h  noise.h  openfoam_parser.h  openfoam_poly_mesh.h  partition_grid.h  post_process.cpp  post_process.h  rasterizer.h  sim_path.h  terrain_extruder.cpp  terrain_extruder.h  utils.h  volume.h
pslFoam/: UEqn.H  alphaDiffusionEqn.H  createFields.H  noise.H  pEqn.H  profile.H  psl.H  pslControls.H  pslFoam.C  stopWatch.H
pslFoam/Make/: files
scripts/: dsl2psl.py  dsl_surface.py  foam2obj.py  gen_complex_terrain.py  gen_dsl.py  gen_profile.py  gen_report.py  init_dsl.py  init_psl.py  mesh2quad.py  mesh_fix.py  monitor_sim.sh  quad2block_mesh_desc.py  quad2stl.py  ramp_block_mesh_gen.py  reconstruct_par.sh  rename_frames.py  render_with_paraview.py  run_foam2vdb_tests.sh  set_field.py  set_release.py  terrain_base.py
scripts/assets/: proc_U  proc_alpha_snow  vdb.rib
scripts/assets/dsl/: Allrun  Allrun-parallel
scripts/assets/dsl/constant/: releaseArea  transportProperties
scripts/assets/dsl/constant/faMesh/: faMeshDefinition
scripts/assets/dsl/system/: controlDict  decomposeParDict  decomposeParDict.16  faSchemes  meshDict
scripts/assets/psl/: Allclean  Allrun  Allrun-parallel
scripts/assets/psl/0.orig/: U  Uinj  alpha.snow  alpha_inj  alpha_inj_U  dsl_U  dsl_W  dsl_divU  dsl_front_sdf  dsl_h  dsl_slope  epsilon  gradAlpha1  k  nuTilda  nut  p_rgh
scripts/assets/psl/constant/: transportProperties  turbulenceProperties
scripts/assets/psl/system/: controlDict  decomposeParDict  fvSchemes  fvSolution  meshDict  meshQualityDict  pslControl  surfaces
scripts/assets/psl2/: Allrun  Allrun-parallel
scripts/assets/psl2/0.orig/: U  alpha.snow  alpha_inj  alpha_inj_U  dsl_U  dsl_front_sdf  dsl_h  dsl_slope  p_rgh
scripts/assets/psl2/constant/: transportProperties
scripts/assets/psl2/system/: controlDict  decomposeParDict  fvSolution  pslControl
scripts/paper_utils/: gen_anim_graph.py  gen_graphs.py  gen_profile.py
tests/: CMakeLists.txt  dsl_data_tests.cpp  interpolation_tests.cpp  main.cpp  stl_foam_test.cpp
tests/assets/: boundary2  cube.msh  cube.msh_.csv  cube.msh__tracked_surface.stl  cube.stl  fa_h  faces2  inlet.stl  outlet.stl  output.msh  owner2  plane.stl  plane45.stl  points1  points2  test.stl  test45.stl  walls.stl
tests/assets/cube/constant/polyMesh/: faces  owner
tests/assets/full/constant/: releaseArea
tests/assets/full/constant/faMesh/: faMeshDefinition
tests/assets/full/constant/polyMesh/: boundary  neighbour
tests/assets/full/system/: blockMeshDict  controlDict  decomposeParDict
tools/: CMakeLists.txt  foam2obj.cpp  foam2vdb.cpp  stats.cpp  stl2foam.cpp  vdb_bash.cpp  vdb_edit.cpp  vdb_surface.cpp
tutorials/: run_alpine.sh  run_curves.sh  run_gis.sh  run_jump.sh  run_logo.sh  run_param_matrix.sh  run_ramp.sh  run_tantalo.sh  run_tutorial.sh  run_wolfsgrube.sh  run_wolfsgrubes.sh
tutorials/assets/alpine/: aoi.dbf  aoi.shp  aoi.shx  release.dbf  release.shp  release.shx
tutorials/assets/jump/: releaseArea
tutorials/assets/logo/: aoi.dbf  aoi.shp  aoi.shx  release.dbf  release.shp  release.shx  releaseArea
tutorials/assets/logo/logo_full/: release.dbf  release.shp  release.shx
tutorials/assets/tantalo/: aoi.dbf  aoi.shp  aoi.shx  release.shp  release.shx  release2.shp  release2.shx
tutorials/assets/wolfsgrube/: Allrun-parallel
tutorials/assets/wolfsgrube/system/: controlDict  faSchemes  shapefileWrite
